--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
     <link rel="stylesheet" href="./styles/index.css" />
   </head>
   <body>
-    <header>
-      <a href="/">CSS Day</a>
-      <div>
-        <nav>
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="speakers.html">Speakers</a></li>
-            <li><a href="#">Contact</a></li>
+    <header class="header">
+      <a class="header__link" href="/">CSS Day</a>
+      <div class="header__nav-container">
+        <nav class="nav">
+          <ul class="nav__list">
+            <li class="nav__list-item"><a href="#">About</a></li>
+            <li class="nav__list-item"><a href="speakers.html">Speakers</a></li>
+            <li class="nav__list-item"><a href="#">Contact</a></li>
           </ul>
         </nav>
         <img src="./icons/shopping-cart.svg" alt="Shopping cart" />
       </div>
     </header>
-    <main>
-      <p>CSS Day is a conference for developers who love beautiful websites.</p>
-      <p>4-8 June 2023</p>
+    <main class="main">
+      <p class="main_heading">
+        CSS Day is a conference for developers who love beautiful websites.
+      </p>
+      <p class="main__sub-heading">4-8 June 2023</p>
       <button>
         Buy Tickets <img src="./icons/arrow-right.svg" alt="Right arrow" />
       </button>
+      <button>Contact Us</button>
     </main>
   </body>
 </html>
